# podcast-api-tts

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.ps1  main.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  logging.py
app/db/: __init__.py  database.py  models.py
app/models/: schemas.py  voices.py
app/routers/: enhance.py  health.py  podcast.py  voices.py
app/services/: document_service.py  enhance_service.py  podcast_repository.py  script_service.py  storage_service.py  tts_service.py
app/utils/: audio.py
diagrams/: arquitetura.drawio
scripts/: download_models.py  install_docling.sh
