[project]
name = "podcast-api-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyaudio",
    "google-generativeai",
    "google",
    "google-genai",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "docling",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
